--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,9 +17,9 @@
             <div class="s">Productos</div>
             <div class="s">Nosotros</div>
         </div>
-        <div class="caja4"><img src="img/img1.JFIF" width="300px" height="300px" ></div>
-        <div class="caja5"><img src="img/img3.jpg" width="150%" height="70%" ></div>
-        <div class="caja6"><img src="img/img4.jpg" width="150%" height="70%" ></div>
+        <div class="caja4"><img src="img1.JFIF" width="300px" height="300px" ></div>
+        <div class="caja5"><img src="img3.jpg" width="150%" height="70%" ></div>
+        <div class="caja6"><img src="img4.jpg" width="150%" height="70%" ></div>
         <div class="caja7"><p>La mejor pasteleria de todo el pais 
                            generaciones de trabajo
                            hasta la fecha
@@ -31,9 +31,9 @@
         <div class="caja8"><p>Creando desde 1925…</p>
       
         </div>
-        <div class="caja9"><img src="img/img2.jpg" width="300px" height="300px" ></div>
-        <div class="caja10"><img src="img/img5.jpg" width="150%" height="70%" ></div>
-        <div class="caja11"><img src="img/img6.jpg" width="150%" height="70%" ></div>
+        <div class="caja9"><img src="img2.jpg" width="300px" height="300px" ></div>
+        <div class="caja10"><img src="img5.jpg" width="150%" height="70%" ></div>
+        <div class="caja11"><img src="img6.jpg" width="150%" height="70%" ></div>
         <div class="caja12"><p>productos de calidad</p></div>
         <div class="caja13">los mejores</div>
         <div class="caja14">panaderia</div>
